<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3A5A5"
    tools:context=".Fragments.Resume">

    <TextView
        android:id="@+id/DifficultResume"
        android:layout_width="118dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:background="@color/rosa1"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/difficult"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResu" />

    <TextView
        android:id="@+id/CategoryResume"
        android:layout_width="113dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@color/rosa1"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueDifficultResume" />

    <TextView
        android:id="@+id/valueDifficultResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="string"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DifficultResume" />

    <TextView
        android:id="@+id/valueScoreResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="integer"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreResume" />

    <TextView
        android:id="@+id/valueCategoryResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="string"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoryResume" />

    <TextView
        android:id="@+id/txtResu"
        android:layout_width="283dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="68dp"
        android:background="@color/rosa1"
        android:backgroundTint="@color/rosa1"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/resume"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/btnResumeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/rosa1"
        android:shadowColor="@color/black"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueScoreResume"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/scoreResume"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="@color/rosa1"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueCategoryResume" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/strawberry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>